# Aggregated-Usage-Models

./: README.md  pyproject.toml  requirements.txt
docker/: lint-check.sh  lint.sh  tests.sh
tests/subscription/: factories.py
tests/usage_record/: factories.py  test_models.py  test_views.py
wingtel/: settings.py  urls.py  wsgi.py
wingtel/att_subscriptions/: apps.py  models.py  serializers.py  views.py
wingtel/att_subscriptions/migrations/: 0002_subscription.py  0003_auto_20210820_0626.py  0004_delete_attsubscription.py
wingtel/plans/: apps.py  models.py  serializers.py  views.py
wingtel/plans/migrations/: 0001_initial.py
wingtel/purchases/: apps.py  models.py  serializers.py  views.py
wingtel/purchases/migrations/: 0001_initial.py  0003_auto_20210820_0626.py
wingtel/sprint_subscriptions/: apps.py  models.py  serializers.py  views.py
wingtel/sprint_subscriptions/migrations/: 0002_delete_sprintsubscription.py
wingtel/subscriptions/: apps.py  models.py  serializers.py  views.py
wingtel/subscriptions/migrations/: 0001_initial.py
wingtel/usage/: admin.py  apps.py  fill_models.py  fixtures.json  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
wingtel/usage/migrations/: 0001_initial.py  0002_add_usage_records.py  0002_auto_20210810_0609.py  0003_add_sql_triggers.py  0003_add_sql_views.py  0003_auto_20210810_0626.py  0004_bothusagerecord_type_of_subscription.py  0005_auto_20210810_0849.py  0006_auto_20210810_0921.py  0007_auto_20210810_1010.py  0008_auto_20210811_0710.py  0009_auto_20210820_0626.py  (+2 more)
(+8 files in other folders)
